--- a/src/views/search_page.ejs
+++ b/src/views/search_page.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/resert.css">
     <link rel="stylesheet" href="/css/Home.css">
     <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css">
-    <title>Home</title>
+    <title>Search</title>
 </head>
 
 <body>
@@ -29,8 +29,8 @@
                 <li class="Navbar-Directory-item">Review</li>
             </ul>
             <div class="Navbar-Search">
-                <form action="/accb_food.vn/search" method="post">
-                    <input class="Navbar-Search-input" type="search" placeholder="Search" name="search">
+                <form action="/accb_food.vn/search">
+                    <input class="Navbar-Search-input" type="text" placeholder="Search" name="search">
                     <button class="Navbar-Search-btn">
                         <span>
                             <i class="fa-solid fa-search"></i>
